<resources>
    <string name="app_name">UGD4_9802_E</string>
    <string name="title_add">Add Employee</string>
    <string name="title_main">List Of Employee</string>
    <string name="full_name">Input full name</string>
    <string name="number">Input number</string>
    <string name="age">Input age</string>
    <string name="add">Add</string>
    <string name="update">Update Employee</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="search">Search By Name</string>
    <string name="cancel1">Cancel</string>
</resources>